[package]
name = "denkproto-rs"
version = "1.0.44"
edition = "2021"
description = "protobuf files for denkweit ecosystem"
license = "MIT"
homepage = "https://denkweit.com"
repository = "https://github.com/DENKweit/denkproto-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio-stream = "0.1.15"
protobuf = "3.3.0"
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
[build-dependencies]
protobuf-codegen = "3.4.0"
tonic-build = "0.11.0"
