[package]
name = "denkproto-rs"
version = "1.0.75"
edition = "2021"
description = "protobuf files for denkweit ecosystem"
license = "MIT"
homepage = "https://denkweit.com"
repository = "https://github.com/DENKweit/denkproto-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
tonic = "0.13.0"
prost = "0.13.3"
tokio-stream = "0.1.17"
protobuf = "3.3.0"
tokio = { version = "1.44.2", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
prost-validate = { version = "0.2.6", features = ["derive"] }
regex = "1.11.1"

[build-dependencies]
prost-build = "0.13.5"
prost-validate-build = "0.2.6"
# protobuf-codegen = "3.4.0"
# tonic-build = "0.11.0"
